--- a/FBAuto/FBAuto/LCWClasses/车源/viewController/FBDetail2Controller.xib
+++ b/FBAuto/FBAuto/LCWClasses/车源/viewController/FBDetail2Controller.xib
@@ -247,6 +247,16 @@
                             <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="1dv-dh-aqa">
+                            <rect key="frame" x="0.0" y="5" width="110" height="65"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <state key="normal">
+                                <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                            </state>
+                            <connections>
+                                <action selector="clickToPersonal:" destination="-1" eventType="touchUpInside" id="2pe-1k-uTC"/>
+                            </connections>
+                        </button>
                     </subviews>
                     <color key="backgroundColor" red="0.078431372549019607" green="0.078431372549019607" blue="0.078431372549019607" alpha="1" colorSpace="calibratedRGB"/>
                 </view>
