--- a/FBAuto/FBAuto/LCWClasses/寻车/viewController/FBFindCarDetailController.xib
+++ b/FBAuto/FBAuto/LCWClasses/寻车/viewController/FBFindCarDetailController.xib
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="5056" systemVersion="13D65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none">
     <dependencies>
+        <deployment defaultVersion="1536" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
     </dependencies>
     <objects>
@@ -112,7 +113,7 @@
         </view>
     </objects>
     <resources>
-        <image name="detail_test.png" width="152" height="158"/>
+        <image name="detail_test.png" width="302" height="304"/>
         <image name="dianhua40_46.png" width="20" height="23"/>
         <image name="geren _bg50_28.png" width="25" height="14"/>
         <image name="liaotian46_46.png" width="23" height="23"/>
