--- a/FBAuto/FBAuto/LCWClasses/寻车/viewController/FBFindCarDetailController.xib
+++ b/FBAuto/FBAuto/LCWClasses/寻车/viewController/FBFindCarDetailController.xib
@@ -23,7 +23,7 @@
             <subviews>
                 <view contentMode="scaleToFill" placeholderIntrinsicWidth="320" placeholderIntrinsicHeight="75" id="iQV-IQ-PR9">
                     <rect key="frame" x="0.0" y="493" width="320" height="75"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                     <subviews>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="detail_test.png" id="0fT-PS-lHK">
                             <rect key="frame" x="5" y="5" width="65" height="65"/>
